--- a/style.css
+++ b/style.css
@@ -12,11 +12,17 @@ body {
   background-attachment: fixed;
 }
 
+img {
+  max-width: 100%;
+  display: block;
+  margin: 0 auto;
+}
+
 form {
   display: grid;
   grid-template-columns: minmax(100px, 1fr) 90px;
   padding: 0 30px;
-  margin: 50px auto;
+  margin: 0 auto 50px auto;
   max-width: 700px;
 }
 
@@ -55,9 +61,9 @@ form button:hover {
   margin: 0 30px;
   border-radius: 4px;
   border: none;
-  padding: 5px 15px;
+  padding: 7.5px 20px;
   background-color: #1B998B;
-  font-size: 2rem;
+  font-size: 1.7rem;
   color: white;
   cursor: pointer;
 }
