--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 }
 
 body {
-  background-image: url('./background-galaxy.png');
+  background-image: url('../background-galaxy.png');
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed;
@@ -92,14 +92,41 @@ form button:hover {
   color: white;
 }
 
+.container-flip {
+  width: 300px;
+  height: 600px;
+  perspective: 1000px;
+}
+
+.container-flip.ativo .flipper{
+	transform: rotateY(180deg);
+}
+
+.flipper{
+  position: relative;
+	width: 100%;
+	height: 100%;
+	transition: transform 0.5s;
+	transform-style: preserve-3d;
+}
+
+.front, .back{
+  position: absolute;
+  backface-visibility: hidden;
+}
+
+.back{
+	transform: rotateY(180deg);
+}
+
 .personagem {
   display: inline-block;
   border-radius: 5px;
   width: 300px;
-  height: 550px;
+  height: 600px;
   background-color: #3c3e44;
   color: white;
-  position: relative;
+  cursor: pointer;
 }
 
 .personagem img {
@@ -115,9 +142,37 @@ form button:hover {
   text-align: center;
   font-size: 1.2rem;
   font-weight: bold;
+}
+
+.personagem.front .status {
   position: absolute;
   top: 13px;
   left: 13px;
+}
+
+.back .personagem {
+  padding: 13px;
+}
+
+.back .personagem .container-nome-status {
+  display: flex;
+  justify-content: space-between;
+}
+
+.back .personagem .status {
+  height: max-content;
+  margin-top: 4px;
+  margin-left: 10px;
+}
+
+.back .personagem ul {
+  list-style: none;
+  height: 150px;
+  overflow: auto;
+}
+
+.back .personagem ul li {
+  margin-bottom: 5px;
 }
 
 .personagem .status.alive{
@@ -136,31 +191,40 @@ form button:hover {
   padding: 13px;
 }
 
-.personagem .sobre .nome {
+.personagem .nome {
   font-size: 2rem;
   font-weight: bold;
   margin-bottom: 20px;
+  height: 80px;
+}
+
+.personagem .box-especie {
   height: 60px;
 }
 
-.personagem .sobre .especie {
-  font-size: 1.45rem;
-  margin-bottom: 20px;
+.personagem .especie {
+  font-size: 1.475rem;
   background-color: #495057;
-  padding: 0 3px;
+  padding: 0 4px;
   border-radius: 4px;
   width: min-content;
 }
 
-.personagem .sobre .titulo-primeiro-episodio {
+.personagem .titulo-caracteristica {
   color: #a5a5a5;
   font-size: 1.2rem;
   font-weight: bold;
   margin-bottom: 1px;
 }
 
-.personagem .sobre .primeiro-episodio {
+.personagem .caracteristica {
   font-size: 1.4rem;
   font-weight: bold;
+  height: 60px;
+}
 
+@media (pointer: coarse) {
+  .personagem {
+    cursor: initial;
+  }
 }
